Refactorización de los metodos en el CitaService, para que no sean varios metodos trayendo el estado de la cita individualmente, si no que haya un metodo general tanto para medico como para el paciente el cual dependiendo del estado de la cita que se esta requiriendo por parametro trae la lista correspondiente.